--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^8.0.5",
     "react-resizable": "^3.0.4",
     "react-slick": "^0.29.0",
+    "redux": "^4.2.1",
     "sharp": "^0.31.3",
     "slick-carousel": "^1.8.1",
     "typescript": "4.9.4",
